@@ -7,6 +7,7 @@
 	* Cleaned up src/Makefile.am.
 	* Get rid of duplicate -g -O2 in CFLAGS.
 	* Eliminate first null termination in setvar.
+	* Turn evalskip into a bit field.
 
 2005-03-25  Gilles Chanteperdrix <gilles.chanteperdrix@laposte.net>
 
